--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "7cc7ba2c-439b-4f88-95fc-fadb7148d5e5"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
